Fix overflow issue on Analytics

--- a/front/src/stylesheets/_all.scss
+++ b/front/src/stylesheets/_all.scss
@@ -197,10 +197,6 @@ html {
   border-color: $color_error;
 }
 
-.opla-analytics {
-  padding: 24px;
-}
-
 .opla-analytics_subpanel {
   display: flex;
 }
